<resources>
    <string name="app_name">VeinView</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_phrase"><u>Don\'t have an account? Get one!</u></string>
    <string name="username">Username</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="BirthDay">Birthday</string>
    <string name="Password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_records">Records</string>
    <string name="title_account">My Account</string>
    <string name="title_dvt_info">What is DVT?</string>
    <string name="subtitle_dvt_info_1">DVT Diagnosis</string>
    <string name="subtitle_dvt_info_2">What is VeinView?</string>
    <string name="subtitle_dvt_info_3">How does it work?</string>
    <string name="login_activity">Login</string>
    <string name="launch_title">VeinView</string>
    <string name="launch_intro">Early DVT Detection</string>
    <string name="version">Version 1.0</string>
    <string name="title_record_info">Record Info</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="settings_desc">Wow so many settings to choose from!</string>
    <string name="submit_profile">Save Changes</string>
    <string name="account_recovery">Forgot Password?</string>




    <!-- Information Texts -->
    <string name="wells_score_info">The Wells\’ score is a number that reflects your risk of developing deep vein thrombosis (DVT). Using this score, your doctor can determine your likelihood of having DVT. This helps your doctor decide whether to proceed with further diagnostic testing, such as a CT scan.</string>
    <string name="ppg_test_info">Photoplethysmography (PPG) is a simple and low-cost optical technique that can be used to detect blood volume changes in the microvascular bed of tissue. It is often used non-invasively to make measurements at the skin surface*.</string>
    <string name="DVT_Info_1_1"><b>Deep vein thrombosis (DVT)</b> is a serious condition that occurs when a blood clot forms in a vein located deep inside your body. A blood clot is a clump of blood that’s turned to a solid state. Deep vein blood clots typically form in your thigh or lower leg, but they can also develop in other areas of your body (Healthline, 2021).</string>
    <string name="DVT_Info_1_2">It is important to know about DVT because it can happen to anybody and can cause serious illness, disability, and in some cases, death. The good news is that DVT is preventable and treatable if discovered early (CDC, 2020).</string>
    <string name="DVT_Info_2_1">If you have a DVT, it\'s important to get diagnosed right away before it becomes a pulmonary embolism. Once a PE blocks an artery in your lung, all blood flow is reduced or stopped completely, which can cause sudden death.</string>
    <string name="DVT_Info_2_2">Your healthcare provider will most likely perform a compression ultrasound, but other tests, like a venogram, CT scan, or D-dimer test, can also be used to diagnose DVT. Through a compression ultrasound, your practitioner is able to see the blood clot and the obstruction of blood flow in the vein.</string>

    <string name="DVT_Info_3_1">The <b>VeinView DVT Detector</b> is a device that uses photoplethysmography (PPG) to detect blood volume changes. By detecting blood volume changes, we can determine your risk level of having a DVT.</string>
    <string name="DVT_Info_3_2">This PPG test is <b>not</b> a diagnostic test like the ones listed above. That is, it cannot tell you for certain whether or not you have a DVT. However, it does provide accurate information and a risk level without an lengthy trip to the hospital nor expensive medical equipment.</string>
    <string name="DVT_Info_3_3">The risk level should be used to determine the necessity of contacting your physician to talk about receiving a diagnostic test for DVT. We would recommend talking to your doctor about a diagnostic test if a <b>red <u>and</u> yellow</b> risk level is evaluated using both the PPG test and the Well\'s Screening Tool <b>in one testing period.</b></string>
    <string name="DVT_Info_4_1">The <b>VeinView DVT Detector</b> performs PPG testing by using an LED infrared light to send light through the skin and a light sensor (photodiode) to catch light reflecting back after hitting the blood.</string>
    <string name="DVT_Info_4_2">By reading the changes in light reflection, the device can read approximate levels of bloodflow through the vein. We can use these numbers to calculate DVT risk.</string>

    <!-- Instruction Texts -->
    <string name="Instructions_title">Instructions:</string>
    <string name="Instructions_1">1. Find a chair in which you can sit comfortably and can stretch out your leg with your heel on the floor.</string>
    <string name="Instructions_2">2. Attach your VeinView device about 10cm above your inner ankle joint using a piece of double sided tape</string>
    <string name="Instructions_3">3. Turn on your device to allow it to calibrate to your skin opacity.</string>
    <string name="Instructions_4">4. Once the device is done calibrating, start the device and perform foot flexions and extensions (Keeping your heel on the ground, bring your toes up, then bring them back down). You will perform 10 such foot flexions, about 1 per second.</string>
    <string name="Instructions_5">5. After the 10 motions, relax and try to remain as still as you can.</string>
    <string name="Instructions_6">6. When your device beeps, you may remove the device and read the value. Record this value in the appropriate box below.</string>
    <string name="Instructions_7">7.Repeat steps 1 through 6 for the other leg.</string>


    <!-- How to Read Results Texts -->
    <string name="how_to_read_results_text"><u>How do I read my results?</u></string>
    <string name="how_to_read_results_text_caps"><u>How Do I Read My Results?</u></string>
    <string name="how_to_read_1">Your results for your different tests are recorded in your records screen. On the scrollable list, they display <b>their risk level, the type of test, and the date </b> when the test was taken.</string>
    <string name="how_to_read_2">A <font color='#6acc6f'><b>Green</b></font> risk level indicates that there is no significant risk of the presence of a DVT. You likely do not need to see a doctor for DVT if you receive a Green rating.</string>
    <string name="how_to_read_3">A <font color='#f0d73a'><b>Yellow</b></font> risk level indicates that there is a risk of the presence of a DVT. We would suggest that you take the other screening test to further inform your risk level.</string>
    <string name="how_to_read_4">A <font color='#f04f3a'><b>Red</b></font> risk level indicates that there is significant risk of the presence of a DVT. Once again, we would suggest that you take the other screening test to further inform your risk level.</string>
    <string name="how_to_read_5">If <b>two<font color='#f0d73a'> Yellow </font>risk levels</b> are obtained between the two tests, then we would suggest exercising caution and informing your physician at your next visit.</string>
    <string name="how_to_read_6">If <b>two <font color='#f04f3a'>Red</font> risk levels</b> <u>or</u> <b>a <font color='#f04f3a'>Red</font> and a <font color='#f0d73a'>Yellow</font> risk level</b> are obtained between the two tests, then we would suggest contacting your physician to request diagnostic testing.</string>
    <string name="how_to_read_7"><b>Note:</b> Incorrect placement of the device will negatively affect your readings. Additionally, if you have <b>venous/arterial disorders or a history of them</b>, this may affect your readings. You may need to talk with your doctor about alternative screening methods for your particular condition.</string>
    <string name="how_to_read_8"><b>Note:</b> For the PPG Test, higher values (seconds) are associated with lower risk. Lower numbers are associated with higher risk.</string>


    <!-- Button Texts -->
    <string name="sign_in_button">Sign In</string>
    <string name="create_account_button">Create Account</string>
    <string name="wells_screen_button">Get a Wells\' Score</string>
    <string name="ppg_test_button">Take a PPG Test</string>
    <string name="profile_button">Profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="dvt_info"><u>What is DVT?</u></string>
    <string name="PPG_title">PPG Test</string>
    <string name="Wells_title">Well\'s Survey</string>
    <string name="title_wells_criteria">Wells’ Criteria</string>
    <string name="submit">Submit</string>
    <string name="dvt_info_next_1">DVT Diagnosis</string>
    <string name="log_out"><u>Log Out</u></string>

    <!--well's test questions-->
    <string name="question_1">Active cancer (Treatment or palliation within 6 months)</string>
    <string name="question_2">Bedridden recently > 3 days or major surgery within 12 weeks</string>
    <string name="question_3">Calf swelling > 3 cm compared to the other leg</string>
    <string name="question_4">Collateral (nonvaricose) superficial veins present</string>
    <string name="question_5">Entire leg swollen</string>
    <string name="question_6">Localized tenderness along the deep venous system</string>
    <string name="question_7">Pitting edema, confined to symptomatic leg</string>
    <string name="question_8">Paralysis, paresis, or recent plaster immobilization of the lower extremity</string>
    <string name="question_9">Previously documented DVT</string>
    <string name="question_10">Alternative diagnosis to DVT as likely or more likely</string>

    <string name="input_1">Left Leg</string>
    <string name="input_2">Right Leg</string>
    <string name="ppg_measurement">seconds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>