<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dvt_app.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_PPG_Test2"
            app:destination="@id/PPG_Test"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_navigation_home_to_wells_Screen2"
            app:destination="@id/wells_Screen"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_navigation_home_to_DVT_InfoFragment"
            app:destination="@id/DVT_InfoFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.example.dvt_app.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.dvt_app.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/wells_Screen"
        android:name="com.example.dvt_app.Wells_Screen"
        android:label="@string/Wells_title"
        tools:layout="@layout/fragment_wells__screen" >
        <action
            android:id="@+id/action_wells_Screen_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/PPG_Test"
        android:name="com.example.dvt_app.PPG_Test"
        android:label="@string/PPG_title"
        tools:layout="@layout/fragment_p_p_g__test" >
        <action
            android:id="@+id/action_PPG_Test_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/DVT_InfoFragment"
        android:name="com.example.dvt_app.DVT_InfoFragment"
        android:label="@string/title_dvt_info_1"
        tools:layout="@layout/fragment_d_v_t__info" >
        <action
            android:id="@+id/action_DVT_InfoFragment_to_DVT_InfoFragment_2"
            app:destination="@id/DVT_InfoFragment_2"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/DVT_InfoFragment_2"
        android:name="com.example.dvt_app.DVT_InfoFragment_2"
        android:label="@string/title_dvt_info_2"
        tools:layout="@layout/fragment_d_v_t__info_2" />
</navigation>